--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.devtools.livereload.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/tms_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
